pawpyseed/core/utils.h

/**
One set of augmentation region functions, i.e.
p_i, phi_i, and phit_i (projector, all electron
partial wave, and partial wave), as well
as the difference of the partial waves, the difference
expanded in spherical Bessel functions, and spline
coefficients for each grid.
*/
typedef struct funcset {
	int l; ///< l quantum number
	double* proj; ///< projector function
	double** proj_spline; ///< projector function spline
	double* aewave; ///< all electron partial wave
	double** aewave_spline; ///< ae partial wave spline coefficients
	double* pswave; ///< pseudo partial wave
	double** pswave_spline; ///< ps partial wave spline coefficients
	double* diffwave; ///< aewave-pswave
	double** diffwave_spline; ///< spline coefficients for diffwave
	double* kwave; ///< Expansion of diffwave in spherical Bessel functions
	double** kwave_spline; ///< spline coefficients for kwave
	double* smooth_diffwave; ///< diffwave on linear grid with high-frequency components removed
	double** smooth_diffwave_spline; ///< spline coefficients for smooth_diffwave
	double* dense_kwave;
	double** dense_kwave_spline;
} funcset_t;
typedef struct ppot {
	int num_projs; ///< number of radial projector functions
	int total_projs; ///< number of projector functions
	int lmax; ///< maximum l-value of any projector
	funcset_t* funcs; ///< funcset for each projector, see funcset
	double rmax; //< maximum radius of the projector functions
	double wave_rmax; ///< maximum radius of the partial waves
	double* pspw_overlap_matrix; ///< overlap matrix for pseudo partial waves
	double* aepw_overlap_matrix; ///< overlap matrix for all electron partial waves
	double* diff_overlap_matrix; ///< overlap matrix of difference between all electron and partial waves
	int proj_gridsize; ///< number of points on projector radial grid
	int wave_gridsize; ///< number of points on partial wave radial grid
	int num_cart_gridpts; ///< number of real space grid points that can fit in the projector sphere
	double* wave_grid; ///< real radial grid for partial waves
	double* kwave_grid; ///< reciprocal radial grid for partial waves
	double* proj_grid; ///< real radial grid for projector functions
	double* smooth_grid;
	double* dense_kgrid;
} ppot_t;
typedef struct kpoint {
	short int up; ///< spin
	int num_waves; ///< number of plane waves in a band
	int* Gs; ///< plane wave coefficients, in sets of three
	double* k; ///< k-point vector
	double weight; ///< k-point weight
	int num_bands; ///< number of bands
	band_t** bands; ///< bands with this k-point
	rayleigh_set_t** expansion;
} kpoint_t;
typedef struct pswf {
	double encut;
	int num_elems; ///< number of elements in the structure
	int* num_projs; ///< number of projectors for each element
	int num_sites; ///< number of sites in the structure
	ppot_t* pps; ///< list of ppot_t objects, one for each element
	int* G_bounds; ///< highest-frequency plane-waves in basis set (xmin, xmax, ymin, ymax, zmin, zmax)
	kpoint_t** kpts; ///< list of kpoint_t objects for the structure
	int nspin; ///< 1 for non-spin-polarized/noncollinear, 2 for spin-polarized
	int nband; ///< number of bands
	int nwk; ///< number of kpoints
	double* lattice; ///< lattice (length 9, each row is a lattice, vector, row major)
	double* reclattice; ///< reciprocal lattice (with 2pi factor!), formatted like lattice
	int* fftg; ///< FFT grid dimensions

	int is_ncl; ///< 1 if noncollinear, 0 otherwise

	int wp_num; ///< length==size of wave_projections in each band
	int num_aug_overlap_sites; ///< used for Projector operations
	double* dcoords; ///< used for Projector operations
	double complex** overlaps; ///< used for Projector operations
} pswf_t;