pawpyseed/core/pawpyc_extern.pxd


    cdef void realspace_state(double complex* x, int BAND_NUM, int KPOINT_NUM,
        pswf_t* wf, int* fftg, int* labels, double* coords)
    cdef void remove_phase(double complex* x, int KPOINT_NUM, pswf_t* wf, int* fftg)
    cdef void ae_state_density(double* P, int BAND_NUM, int KPOINT_NUM, pswf_t* wf,
        int* fftg, int* labels, double* coords)
    cdef void ncl_realspace_state(double complex* x, int BAND_NUM, int KPOINT_NUM,
        pswf_t* wf, int* fftg, int* labels, double* coords)
    cdef void ae_chg_density(double* P, pswf_t* wf, int* fftg, int* labels, double* coords)
    cdef void ncl_ae_chg_density(double* P, pswf_t* wf, int* fftg, int* labels, double* coords)
    cdef void project_realspace_state(double complex* projs, int BAND_NUM, pswf_t* wf, pswf_t* wf_R,
        int* fftg, int* labels, double* coords, int* labels_R, double* coords_R)
    cdef void write_realspace_state_ncl_ri(char* filename1, char* filename2,
        char* filename3, char* filename4, int BAND_NUM, int KPOINT_NUM,
        pswf_t* wf, int* fftg, int* labels, double* coords)
    cdef double* realspace_state_ri(int BAND_NUM, int KPOINT_NUM, pswf_t* wf, int* fftg,
            int* labels, double* coords)
    cdef void write_volumetric(char* filename, double* x, int* fftg, double scale)
    cdef double* write_realspace_state_ri_return(char* filename1, char* filename2, int BAND_NUM, int KPOINT_NUM,
        pswf_t* wf, int* fftg, int* labels, double* coords)
    cdef double* write_density_return(char* filename, pswf_t* wf,
        int* fftg, int* labels, double* coords)
    cdef void write_realspace_state_ri_noreturn(char* filename1, char* filename2, int BAND_NUM, int KPOINT_NUM,
        pswf_t* wf, int* fftg, int* labels, double* coords)
    cdef void write_density_noreturn(char* filename, pswf_t* wf,
        int* fftg, int* labels, double* coords)
    

cdef extern from "sbt.h":

    ctypedef struct  sbt_descriptor_t:
            double kmin
            double kappamin
            double rmin
            double rhomin
            double drho
            double dt
            int N
            double complex** mult_table
            double* ks
            double* rs
            int lmax
    cdef sbt_descriptor_t* spherical_bessel_transform_setup(double encut, double enbuf, int lmax, int N,
        double* r, double* ks)
    cdef double* wave_spherical_bessel_transform(sbt_descriptor_t* d, double* f, int l)
    cdef double* inverse_wave_spherical_bessel_transform(sbt_descriptor_t* d, double* f, int l)
    cdef void free_sbt_descriptor(sbt_descriptor_t* d)
    

cdef extern from "linalg.h":

    cdef void fft3d(double complex* x, int* G_bounds, double* lattice,
        double* kpt, int* Gs, float complex* Cs, int num_waves, int* fftg)
    cdef void fwd_fft3d(double complex* x, int* G_bounds, double* lattice,
        double* kpt, int* Gs, float complex* Cs, int num_waves, int* fftg)
    

cdef extern from "radial.h":

    cdef double complex offsite_wave_overlap(double* dcoord, double* r1, double* f1, double** spline1, int size1,
        double* r2, double* f2, double** spline2, int size2,
        double* lattice, int l1, int m1, int l2, int m2)
    cdef double complex reciprocal_offsite_wave_overlap(double* dcoord,
        double* k1, double* f1, double** s1, int size1,
        double* k2, double* f2, double** s2, int size2,
        double* lattice, int l1, int m1, int l2, int m2)
    

cdef extern from "momentum.h":

    ctypedef struct  transform_spline_t:
        double* transform
        double** spline
    ctypedef struct  density_ft_t:
        int n1
        int l1
        int m1
        int n2
        int l2
        int m2
        int size
        double* ks
        transform_spline_t* transforms
    ctypedef struct  density_ft_elem_t:
        int num_densities
        int total_projs
        density_ft_t* densities
    cdef void free_transform_spline_list(transform_spline_t* transforms, int num_transforms)
    cdef void free_density_ft_list(density_ft_t* densities, int total_projs)
    cdef void free_density_ft_elem_list(density_ft_elem_t* elems, int num_elems)
    cdef float complex pseudo_momentum(int* GP, int* G_bounds, double* lattice,
        int* G1s, float complex* C1s, int num_waves1,
        int* G2s, float complex* C2s, int num_waves2, int* fftg)
    cdef void mul_partial_waves(double* product, int size, double* r, double* f1, double* f2)
    cdef void make_rho(double* rho, int size, double* grid, double* aewave1, double* pswave1, double* aewave2, double* pswave2)
    cdef density_ft_t spher_transforms(int size, double* r, double* f, int l1, int m1, int l2, int m2, double encut)
    cdef double complex spher_momentum(density_ft_t densities, double* G)
    cdef density_ft_elem_t get_transforms(ppot_t pp, double encut)
    cdef density_ft_elem_t* get_all_transforms(pswf_t* wf, double encut)
    cdef double complex get_momentum_matrix_element(pswf_t* wf, int* labels, double* coords,
                                                int b1, int k1, int s1,
                                                int b2, int k2, int s2,
                                                int* GP, density_ft_elem_t* elems)
    cdef void get_momentum_matrix(double complex* matrix, int numg, int* igall,
                            pswf_t* wf, int* labels, double* coords,
                            int band1, int kpt1, int spin1,
                            int band2, int kpt2, int spin2,
                            density_ft_elem_t* transforms_list,
                            double encut)
    cdef void momentum_grid_size(pswf_t* wf, double* nb1max, double* nb2max, double* nb3max,
                            int* npmax, double encut)
    cdef int get_momentum_grid(int* igall, pswf_t* wf, double nb1max, double nb2max, double nb3max, double encut)
    cdef void grid_bounds(int* G_bounds, int* gdim, int* igall, int num_waves)
    cdef void list_to_grid_map(int* grid, int* G_bounds, int* gdim, int* igall, int num_waves)
    cdef void fill_grid(float complex* x, int* Gs, float complex* Cs, int* fftg, int numg)
    cdef void fullwf_reciprocal(double complex* Cs, int* igall, pswf_t* wf, int numg,
        int band_num, int kpt_num, int* labels, double* coords)
    cdef double complex kwave_value(double* x, double* wave, double** spline, int size,
        int l, int m, double* pos)
    cdef double complex quick_overlap(int* dG, double complex* C1s, double complex* C2s, int numg,
        int* Gs, int* gmap, int* G_bounds, int* gdim)
    